@@ -1,0 +1,1 @@
+typedef int (*foo_func_t)(void *foo, int bar);	/**** Foo function type ****/
